# rtgi

./: .gitignore  AUTHORS  Makefile.am  README  README.md  assignment-defines.h  config.h.in  configure.ac  make-assignment  nvcc-wrapper  script  script-brdftest  script-mis  script-sibenik
assconf/: a01  a01-ref  a02  a02-ref  a03  a03-ref  a04  a04-ref  a05  a05-ref  a06  a06-ref  a07  a07-ref  a08  a08-ref
debug/: Makefile.am  obj_writer.cpp  obj_writer.h  pixel.cpp  pixel.h
driver/: Makefile.am  cmdline.cpp  cmdline.h  interaction.cpp  interaction.h  main.cpp  preview.cpp  preview.h
gi/: Makefile.am  direct-steps.h  direct-steps.lisp  direct.cpp  direct.h  primary-hit.cpp  primary-hit.h  primary-steps.h  primary-steps.lisp  pt.cpp  pt.h
libgi/: Makefile.am  algorithm.cpp  algorithm.h  camera.cpp  color.h  context.h  denoise.cpp  denoise.h  discrete_distributions.cpp  discrete_distributions.h  framebuffer.cpp  framebuffer.h  intersect.h  material.cpp  material.h  random.cpp  random.h  rt.cpp  rt.h  sampling.h  scene.cpp  scene.h  step-gen.lisp  timer.cpp  timer.h  util.h  wavefront-rt.cpp  wavefront-rt.h  wavefront-scalar.cpp  wavefront-scalar.h
libgi/gl/: Makefile.am  buffer.h  shader.cpp  shader.h
render-data/: Makefile.am
rt/: Makefile.am
rt/bbvh-base/: Makefile.am  bvh.cpp  bvh.h  bvh2.cpp
rt/cpu/: Makefile.am  bounce.cpp  bounce.h  bvh-ctor.h  bvh.cpp  bvh.h  bvh2.cpp  denoise.cpp  denoise.h  embree.cpp  embree.h  platform.h  preprocessing.cpp  preprocessing.h  seq.cpp  seq.h  wavefront.cpp  wavefront.h
rt/cuda/: Makefile.am  base.cpp  base.cu  base.h  bounce.cu  bounce.h  cuda-helpers.cpp  cuda-helpers.h  cuda-operators.h  embedded-ptx-code.h  kernels.cu  kernels.h  optix-helper.cpp  optix-helper.h  optix-kernels.cu  optix-launch-params.h  optix-records.h  optix-tracer.cu  optix-tracer.h  platform.cpp  platform.h  preprocessing-kernels.cu  preprocessing.cpp  preprocessing.h  rni.cpp  rni.cu  rni.h  trace-kernels.cu  tracers.cu  tracers.h
rt/cuda/tracers/: dynamic-while-while.cu  dynamic-while-while.h  if-if.cu  if-if.h  kernels.cu  kernels.h  persistent-if-if.cu  persistent-if-if.h  persistent-speculative-while-while.cu  persistent-speculative-while-while.h  persistent-while-while.cu  persistent-while-while.h  simple.cu  simple.h  speculative-while-while.cu  speculative-while-while.h  while-while.cu  while-while.h
rt/embree/: Makefile.am  embree.cpp
rt/gl/: .gitignore  Makefile.am  add-hitpoint-albedo-hackytex.glsl  add-hitpoint-albedo-plain.glsl  add-hitpoint-albedo.glsl  base.cpp  base.h  bindings.h  bounce.cpp  bounce.h  bvh-any.glsl  bvh-closest.glsl  bvh.cpp  bvh.h  clear-framebuffer.glsl  compute-hitpoint-albedo.glsl  copy-to-preview.glsl  debug.cpp  depcomp.glsl  find-hit.cpp  find-hit.h  integrate-light-sample.glsl  opengl.cpp  opengl.h  platform.cpp  platform.h  preamble.glsl  preprocessing.cpp  preprocessing.h  random.glsl  ray-setup-glsl.cpp  ray-setup.glsl  rni.cpp  rni.h  sample-light.glsl  sample-uniform.glsl  seq-any.glsl  seq-closest.glsl  seq.cpp  seq.h  (+3 more)
rt/seq/: Makefile.am  seq.cpp
rtx/rt/cuda/: rng.h
scripts/: Makefile.am  a1-sibenik  a2-sibenik  a2-sponza  a3-brdf-test  a3-sibenik  a5-brdf-test  a5-sibenik  a6-brdf-test  a6-mis  a6-pots  a6-sibenik  a6-sponza-nosky  a6-sponza-sky1  a6-sponza-sky2  a6-sponza-sky3  a7-sibenik  a7-sibenik-bounce  a7-sibenik-rr  a7-sponza  a7-sponza-sky1  a7-sponza-sky2  a8-sibenik  a8-sibenik-bounce  a8-sibenik-rr  a8-sponza  a8-sponza-sky  a8-sponza-sky1  a8-sponza-sky2  a9-sibenik  a9-sponza  a9-sponza-sky1  a9-sponza-sky2  mis  optix  pots  sibenik  sibenik.pre  wf-all  wf-prev  (+3 more)
scripts/cuda/: dynamicwhilewhile  ifif  persistentifif  persistentspeculativewhilewhile  persistentwhilewhile  sanmiguel1  sanmiguel2  sanmiguel3  sanmiguel4  simple  speculativewhilewhile  test  whilewhile  whilewhile-sponza
src/: Makefile.am  algorithm.h  bvh.h  bvh2.cpp  camera.cpp  camera.h  cmdline.cpp  cmdline.h  color.h  context.h  discrete_distributions.cpp  discrete_distributions.h  framebuffer.cpp  framebuffer.h  interaction.cpp  interaction.h  intersect.h  main.cpp  material.cpp  material.h  primary-hit.cpp  primary-hit.h  random.cpp  random.h  rt.cpp  rt.h  scene.cpp  scene.h  util.h
