EXTRA_DIST = 
#ifdef RTGI_CONFIG_A1
EXTRA_DIST += a1-tri a1-sibenik
#elif defined RTGI_CONFIG_A2
EXTRA_DIST += a2-tris a2-sibenik a2-sponza
#elif defined RTGI_A03
EXTRA_DIST += a3-sibenik a3-brdf-test
#elif defined RTGI_A04
EXTRA_DIST += a4-sibenik a4-brdf-test
#elif defined RTGI_A05 || defined RTGI_A05_REF
EXTRA_DIST += a5-sibenik a5-brdf-test
#elif defined RTGI_A06 || defined RTGI_A06_REF
EXTRA_DIST += a6-sibenik a6-brdf-test
#elif defined RTGI_A07 || defined RTGI_A07_REF
EXTRA_DIST += a7-mis
#elif defined RTGI_A08 || defined RTGI_A08_REF
EXTRA_DIST += a8-sibenik a8-sibenik-bounce a8-sibenik-rr a8-sponza a8-sponza-sky1 a8-sponza-sky2
#elif defined RTGI_A09 || defined RTGI_A09_REF
EXTRA_DIST += a9-sibenik a9-sponza a9-sponza-sky1 a9-sponza-sky2
#else
EXTRA_DIST += brdf-test mis sibenik sponza
#endif
