EXTRA_DIST = 
#ifdef RTGI_CONFIG_A1
EXTRA_DIST += a1-tri a1-sibenik
#elif defined RTGI_CONFIG_A2
EXTRA_DIST += a2-tris a2-sibenik a2-sponza
#elif defined RTGI_CONFIG_A3
EXTRA_DIST += a3-sibenik a3-brdf-test
#elif defined RTGI_CONFIG_A4
EXTRA_DIST += a4-sibenik a4-brdf-test
#elif defined RTGI_CONFIG_A5
EXTRA_DIST += a5-sibenik a5-brdf-test
#elif defined RTGI_CONFIG_A6
EXTRA_DIST += a6-sibenik a6-brdf-test
#elif defined RTGI_CONFIG_A7
EXTRA_DIST += a7-mis
#elif defined RTGI_CONFIG_A8
EXTRA_DIST += a8-sibenik a8-sibenik-bounce a8-sibenik-rr a8-sponza a8-sponza-sky1 a8-sponza-sky2
#elif defined RTGI_CONFIG_A9
EXTRA_DIST += a9-sibenik a9-sponza a9-sponza-sky1 a9-sponza-sky2
#else
EXTRA_DIST += brdf-test mis sibenik sponza
#endif
