EXTRA_DIST = 
#ifdef RTGI_CONFIG_A1
EXTRA_DIST += a1-tri a1-sibenik
#elif defined RTGI_CONFIG_A2
EXTRA_DIST += a2-tris a2-sibenik a2-sponza
#elif defined RTGI_CONFIG_A3
EXTRA_DIST += a3-sibenik a3-brdf-test
#elif defined RTGI_CONFIG_A4
EXTRA_DIST += a4-sibenik a4-brdf-test
#elif defined RTGI_CONFIG_A5
EXTRA_DIST += a5-sibenik a5-brdf-test
#elif defined RTGI_CONFIG_A6
EXTRA_DIST += a6-mis a6-pots a6-sponza-nosky a6-sponza-sky1 a6-sponza-sky2
#elif defined RTGI_CONFIG_A7
EXTRA_DIST += a7-sibenik a7-sibenik-bounce a7-sibenik-rr a7-sponza a7-sponza-sky1 a7-sponza-sky2
#elif defined RTGI_CONFIG_A8
EXTRA_DIST += a8-sibenik a8-sponza a8-sponza-sky1 a8-sponza-sky2
#else
EXTRA_DIST += brdf-test mis sibenik sponza
#endif
